libs/modkit-db-macros/tests/ui/err_unrestricted_with_resource.stderr
error: Cannot use 'unrestricted' with 'resource_col'

         = note: resource_col defined here

 --> tests/ui/err_unrestricted_with_resource.rs:6:10
  |
6 | #[secure(unrestricted, resource_col = "id")]
  |          ^^^^^^^^^^^^

error: When using 'unrestricted', no other column attributes are allowed
 --> tests/ui/err_unrestricted_with_resource.rs:6:10
  |
6 | #[secure(unrestricted, resource_col = "id")]
  |          ^^^^^^^^^^^^
